Finished Isotope plugin

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
     <title>Kyle Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/superslides.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
@@ -19,8 +20,6 @@
 <body>
     <div id="slides">
         <div class="overlay"></div>
-
-        
 
         <ul class="slides-container">
           <li>
@@ -62,12 +61,15 @@
                 <div class="col-md-7">
                     <h4>About Me</h4>
                     <p>
-                        Hi there! I'm Kyle Law from Johor Bahru, Malaysia and currently looking for remote opportunities. I have experience in PHP, Ruby, Rails 6, JavaScript, Python-Flask, and React. I've self-taught myself programming through numerous resources, particularly Microverse and Udacity.</p>
+                        Here's Kyle Law from Johor Bahru, Malaysia, and open for any opportunities! I have experience in PHP, Ruby, Rails 6, JavaScript, Python-Flask, and React. I self-taught myself programming through numerous resources, primarily Microverse and Udacity.</p>
                     <p>
                         My competency in software development has been accredited by the Microverse Software Development Program and Udacity Full Stack Nanodegree Program.
                     </p>
                     <p>
                         Before that, I studied BSc(Hons) Financial Analysis at Sunway University.
+                    </p>
+                    <p>
+                        When I'm not coding I practice chess, gym, or play the piano.
                     </p>
                 </div>
             </div>
@@ -132,6 +134,299 @@
         </div>
     </div>
 
+    <div id="stats" class="statsSection section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <div class="squareItem">
+                        <div class="squareInnerContainer">
+                            <div class="squareIcon">
+                                <i class="far fa-thumbs-up"></i>
+                            </div>
+                            <div class="squareContent">
+                                <h2 class="counter">60</h2>
+                                <h3>Verified Technical Projects</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="squareItem">
+                        <div class="squareInnerContainer">
+                            <div class="squareIcon">
+                                <i class="fas fa-cloud"></i>
+                            </div>
+                            <div class="squareContent">
+                                <h2 class="counter">18</h2>
+                                <h3>Database-Backed Web Apps</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="squareItem">
+                        <div class="squareInnerContainer">
+                            <div class="squareIcon">
+                                <i class="fas fa-pen-nib"></i>
+                            </div>
+                            <div class="squareContent">
+                                <h2 class="counter">10</h2>
+                                <h3>Articles Published</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="squareItem">
+                        <div class="squareInnerContainer">
+                            <div class="squareIcon">
+                                <i class="fas fa-graduation-cap"></i>
+                            </div>
+                            <div class="squareContent">
+                                <h2 class="counter">2</h2>
+                                <h3>Career Oriented Programs</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="contact" class="contactSection section">
+        <div class="col-md-12 text-center">
+            <p class="subHeading">Like what you see?</p>
+            <h2>I'd love to hear from you!</h2>
+            <a href="mailTo: zhunkhing@gmail.com" class="contactButton">GET IN TOUCH!</a>
+        </div>
+    </div>
+
+	<div id="portfolio" class="section">
+
+		<div class="container">
+
+			<div class="row">
+
+				<div class="heading">
+					<h2>PORTFOLIO</h2>
+				</div>
+
+				<div class="filter">
+
+					<ul id="filters">
+
+                        <li><a href="#" data-filter="*" class="current">ALL</a></li>
+                        <li><a href="#" data-filter=".react">React</a></li>
+						<li><a href="#" data-filter=".php">PHP</a></li>
+						<li><a href="#" data-filter=".rails">Rails</a></li>
+                        <li><a href="#" data-filter=".python">Python</a></li>
+
+					</ul>
+
+				</div>
+
+
+				<div class="itemsContainer">
+
+					<ul class="items row">
+
+						<li class="react col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+
+							<div class="item">
+
+								<img src="img/thumbnails/twitter-square.png">
+
+
+								<div class="icons">
+									<a href="img/twitter.png" title="View image" class="openButton" data-fancybox data-caption="This is a cute dog">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="www.github.com/Kyle-Law" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+								</div>
+
+								<div class="imageOverlay"></div>
+
+							</div>
+
+
+						</li>
+
+						<li class="php col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+
+							<div class="item">
+
+								<img src="img/thumbnails/twitter-square.png">
+
+
+								<div class="icons">
+									<a href="img/twitter.png" title="View image" class="openButton" data-fancybox data-caption="This is a cute dog">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="www.github.com/Kyle-Law" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+								</div>
+
+								<div class="imageOverlay"></div>
+
+							</div>
+
+
+						</li>
+
+						<li class="rails col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+
+							<div class="item">
+
+								<img src="img/thumbnails/twitter-square.png">
+
+
+								<div class="icons">
+									<a href="img/twitter.png" title="View image" class="openButton" data-fancybox data-caption="This is a cute dog">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="www.github.com/Kyle-Law" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+								</div>
+
+								<div class="imageOverlay"></div>
+
+							</div>
+
+
+						</li>
+
+						<li class="python col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+
+							<div class="item">
+
+								<img src="img/thumbnails/twitter-square.png">
+
+
+								<div class="icons">
+									<a href="img/twitter.png" title="View image" class="openButton" data-fancybox data-caption="This is a cute dog">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="www.github.com/Kyle-Law" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+								</div>
+
+								<div class="imageOverlay"></div>
+
+							</div>
+
+
+						</li>
+
+						<li class="php col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+
+							<div class="item">
+
+								<img src="img/thumbnails/twitter-square.png">
+
+
+								<div class="icons">
+									<a href="img/twitter.png" title="View image" class="openButton" data-fancybox data-caption="This is a cute dog">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="www.github.com/Kyle-Law" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+								</div>
+
+								<div class="imageOverlay"></div>
+
+							</div>
+
+
+						</li>
+
+
+						<li class="react col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+
+							<div class="item">
+
+								<img src="img/thumbnails/twitter-square.png">
+
+
+								<div class="icons">
+									<a href="img/twitter.png" title="View image" class="openButton" data-fancybox data-caption="This is a cute dog">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="www.github.com/Kyle-Law" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+								</div>
+
+								<div class="imageOverlay"></div>
+
+							</div>
+
+
+						</li>
+
+						<li class="rails col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+
+							<div class="item">
+
+								<img src="img/thumbnails/twitter-square.png">
+
+
+								<div class="icons">
+									<a href="img/twitter.png" title="View image" class="openButton" data-fancybox data-caption="This is a cute dog">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="www.github.com/Kyle-Law" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+								</div>
+
+								<div class="imageOverlay"></div>
+
+							</div>
+
+
+						</li>
+
+					</ul>
+
+				</div>
+
+
+
+
+
+
+			</div>
+
+		</div>
+
+	</div>
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+    <script src="js/countUp.js"></script>
+    <script src="js/countUp-jquery.js"></script>
     <script src="js/jquery.easypiechart.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/typed.min.js"></script>
