--- a/index.html
+++ b/index.html
@@ -52,6 +52,34 @@
         </nav>
     </div>
 
+    <nav id="navigation" class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="#">Kyle Law</a>
+        
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars navbar-toggler-icon"></i>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#skills">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#stats">Stats</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#portfolio">Portfolio</a>
+              </li>
+          </ul>
+        </div>
+    </nav>
+
     <div id="about" class="section">
         <div class="container">
             <div class="row">
@@ -230,7 +258,7 @@
 
 					<ul class="items row">
 
-						<li class="react col-xs-6 col-sm-4 col-md-3 col-lg-3">
+						<li onclick="" class="react col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 
 							<div class="item">
@@ -255,7 +283,7 @@
 
 						</li>
 
-						<li class="php col-xs-6 col-sm-4 col-md-3 col-lg-3">
+						<li onclick="" class="php col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 
 							<div class="item">
@@ -280,7 +308,7 @@
 
 						</li>
 
-						<li class="rails col-xs-6 col-sm-4 col-md-3 col-lg-3">
+						<li onclick="" class="rails col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 
 							<div class="item">
@@ -305,7 +333,7 @@
 
 						</li>
 
-						<li class="python col-xs-6 col-sm-4 col-md-3 col-lg-3">
+						<li onclick="" class="python col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 
 							<div class="item">
@@ -330,7 +358,7 @@
 
 						</li>
 
-						<li class="php col-xs-6 col-sm-4 col-md-3 col-lg-3">
+						<li onclick="" class="php col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 
 							<div class="item">
@@ -356,7 +384,7 @@
 						</li>
 
 
-						<li class="react col-xs-6 col-sm-4 col-md-3 col-lg-3">
+						<li onclick="" class="react col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 
 							<div class="item">
@@ -381,7 +409,7 @@
 
 						</li>
 
-						<li class="rails col-xs-6 col-sm-4 col-md-3 col-lg-3">
+						<li onclick="" class="rails col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 
 							<div class="item">
@@ -419,7 +447,13 @@
 
 		</div>
 
-	</div>
+    </div>
+    
+    <div class="copyrightSection">
+        <div class="col-md-12 text-center">
+            <p>&copy; Copyright Kyle Law 2020</p>
+        </div>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
