--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
 </head>
 <body>
+    <div class="loader">
+        <div class="inner"></div>
+    </div>
+    
     <div id="slides">
         <div class="overlay"></div>
 
