--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="loader">
         <div class="inner"></div>
     </div>
-    
+
     <div id="slides">
         <div class="overlay"></div>
 
@@ -57,7 +57,7 @@
     </div>
 
     <nav id="navigation" class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Kyle Law</a>
+        <a class="navbar-brand" href="#slides">Kyle Law</a>
         
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fas fa-bars navbar-toggler-icon"></i>
